syntax = "proto3";
package auth;

option go_package = "./grpc_auth;grp—Å_auth";

service Auth {
    rpc Register (RegisterRequest) returns (RegisterResponse);
    rpc Login (LoginRequest) returns (LoginResponse);
    rpc IsAdmin (IsAdminRequest) returns (IsAdminResponse);
}

message RegisterRequest {
    string email = 1;
    string password = 2;
}

message LoginRequest {
    string email = 1;
    string password = 2;
    int32 app_id = 3;
}

message RegisterResponse {
    int64 user_id = 1;
}

message LoginResponse {
    string token = 1;
}

message IsAdminRequest {
    int64 user_id = 1;
}

message IsAdminResponse {
    bool is_admin = 1;
}